aligned div on correct possision

--- a/src/app/component/stunden-overview/stunden-overview.component.less
+++ b/src/app/component/stunden-overview/stunden-overview.component.less
@@ -35,11 +35,10 @@
     #overview-title();
 
     #daypicker{
-        margin-left: -40%;        
-
+        margin-left: 2rem;
     }   
     display: grid;
-    grid-template-columns: 25% 50% 25%;
+    grid-template-columns: 1fr 24rem 1fr;
     grid-template-rows: 1fr;
     grid-area: "query";
 
